tests/assets/test_suites/w3c_wsdl20/documents/good/Service-3G/Service.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/Service-3G/Service.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/Service"
	xmlns:tns="http://example.org/Service"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a valid use of a Service with an address
		specified on the endpoint.
	</wsdl:documentation>

	<wsdl:types>
		<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema"
			elementFormDefault="qualified"
			targetNamespace="http://example.org/Service">
			<xsd:element name="myElement" type="xsd:string" />
		</xsd:schema>
	</wsdl:types>

	<wsdl:interface name="EchoInterface">
		<wsdl:operation name="Echo"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input element="tns:myElement" />
			<wsdl:output element="tns:myElement" />
		</wsdl:operation>
	</wsdl:interface>

	<wsdl:binding name="EchoSOAPBinding"
		type="http://www.w3.org/ns/wsdl/soap"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/" />

	<wsdl:service name="EchoService" interface="tns:EchoInterface">
		<wsdl:endpoint name="SOAPEndpoint" binding="tns:EchoSOAPBinding"
			address="http://www.example.com/services/EchoService" />
	</wsdl:service>
</wsdl:description>
